--- a/package.json
+++ b/package.json
@@ -43,10 +43,13 @@
     "datatables.net-buttons-bs": "^1.2.1"
   },
   "devDependencies": {
-    "babel": "^5.8.21",
+    "babel": "^5.8.38",
+    "babel-core": "^6.22.1",
     "babel-eslint": "^4.0.8",
     "babel-jest": "^5.3.0",
-    "babel-loader": "^5.3.3",
+    "babel-loader": "^5.4.2",
+    "babel-preset-latest-node6": "^0.1.0",
+    "babel-preset-react": "^6.22.0",
     "d3": "^3.5.6",
     "eslint": "^1.7.3",
     "eslint-plugin-react": "^3.6.3",
